--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "icon": "svgr icons -d components/icons --icon --replace-attr-values \"#616161=currentColor\", \"#484644=currentColor\""
   },
   "dependencies": {
+    "@fluentui/react-icons": "^0.4.1",
+    "@fluentui/react-icons-northstar": "^0.52.0",
     "classnames": "^2.2.6",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
-
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@storybook/addon-actions": "^6.1.15",
     "@storybook/addon-essentials": "^6.1.15",
     "@storybook/addon-links": "^6.1.15",
     "@storybook/react": "^6.1.15",
-    "babel-loader": "^8.2.2",
     "@svgr/cli": "^5.5.0",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.2.3",
