--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "icon": "svgr icons -d components/icons --icon --replace-attr-values \"#616161=currentColor\", \"#484644=currentColor\""
+    "icon": "svgr icons -d components/icons --icon --replace-attr-values \"#616161=currentColor\""
   },
   "dependencies": {
     "@fluentui/react-icons": "^0.4.1",
@@ -16,7 +16,8 @@
     "classnames": "^2.2.6",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-responsive-carousel": "^3.2.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
