loader component created

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fluentui/react-icons-northstar": "^0.52.0",
     "classnames": "^2.2.6",
     "next": "10.0.5",
+    "office-ui-fabric-react": "^7.161.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-responsive-carousel": "^3.2.12"
