--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@fluentui/react-icons": "^0.4.1",
     "@fluentui/react-icons-northstar": "^0.52.0",
+    "@reduxjs/toolkit": "^1.5.0",
     "classnames": "^2.2.6",
     "next": "10.0.5",
     "office-ui-fabric-react": "^7.161.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.12"
   },
   "devDependencies": {
@@ -29,8 +31,11 @@
     "@svgr/cli": "^5.5.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.2.3",
+    "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
     "react-is": "^16.13.1",
     "style-loader": "^2.0.0"
