--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fluentui/react-icons": "^0.4.1",
     "@fluentui/react-icons-northstar": "^0.52.0",
     "@reduxjs/toolkit": "^1.5.0",
+    "@uifabric/react-hooks": "^7.13.11",
     "classnames": "^2.2.6",
     "next": "10.0.5",
     "office-ui-fabric-react": "^7.161.0",
