--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "icon": "svgr icons -d components/icons --icon --replace-attr-values \"#616161=currentColor\",\"#fff=currentColor\",\"#8A8886=currentColor\",\"#424242=currentColor\""
+    "icon": "svgr icons -d components/icons --icon --replace-attr-values \"#616161=currentColor\",\"#fff=currentColor\",\"#8A8886=currentColor\",\"#424242=currentColor\",\"#242424=currentColor\""
   },
   "dependencies": {
     "@fluentui/react-icons": "^0.4.1",
