--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@fluentui/react-icons-northstar": "^0.52.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@uifabric/react-hooks": "^7.13.11",
+    "apexcharts": "^3.25.0",
     "classnames": "^2.2.6",
     "next": "10.0.5",
     "office-ui-fabric-react": "^7.161.0",
     "react": "17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.12"
